--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <li></li>
                 
                             
-                            <a href="mailto:iammalikali3@gmail.com"><li>malikali19december@gmail.com</li></a>
+                            <a href="mailto:iammalikali3@gmail.com"><li>iammalikali3@gmail.com</li></a>
                         </ul>
                     </div>
                     <div class="contact-widget">
